<resources>
    <string name="app_name">Striker</string>
    <string name="chatterbox">CHATTERBOX</string>
    <string name="desp"></string>
    <string name="abc">Click to begin..</string>
    <string name="abcd">Username:</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="password">Password:</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="mobile">Contact no.</string>
    <string name="submit">Submit</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
