<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bck"
    tools:context="com.example.krishna.striker.Main2Activity">


    <TextView
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp"
        android:textSize="24sp"
        tools:textStyle="normal|bold"
        android:id="@+id/textView5" />

    <TextView
        android:text="@string/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_toStartOf="@+id/editText"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        tools:textStyle="normal|bold"
        android:id="@+id/textView6" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignStart="@+id/editText2" />

    <TextView
        android:text="@string/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        tools:textStyle="normal|bold"
        android:id="@+id/textView7"
        android:layout_below="@+id/radioButton"
        android:layout_alignEnd="@+id/textView6" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:id="@+id/radioButton3"
        android:layout_alignStart="@+id/radioButton"
        android:layout_alignEnd="@+id/radioButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        tools:ignore="LabelFor"
        android:hint="@string/password"
        android:maxLines="1"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/editText" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:elevation="9dp"
        tools:targetApi="lollipop"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginTop="72dp" />

    <TextView
        android:text="@string/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        tools:textStyle="normal|bold"
        android:id="@+id/textView10"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/editText3"
        android:layout_alignEnd="@+id/textView4" />

    <EditText
        android:hint="@string/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:textSize="24sp"
        tools:textStyle="normal|bold"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignEnd="@+id/editText2" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:id="@+id/textView4"
        android:textSize="24sp"
        tools:textStyle="normal|bold"
        android:layout_below="@+id/editText"
        android:layout_toStartOf="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        tools:ignore="LabelFor"
        android:hint="@string/username"
        android:maxLines="1"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginTop="14dp" />

    <TextView
        android:text="@string/abcd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</ScrollView>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>